--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 <body>
     <img src="logo.png" alt="Logo" style="width:150px;height:auto;">
     <h1>LB Handmade</h1>
-    <div class="link"><a href="https://link1.com">Tienda Online</a></div>
+    <div class="link"><a href="https://lbhandmade.mitiendanube.com/">Tienda Online</a></div>
 </body>
 </html>
