--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif; 
             text-align: center; 
             padding: 50px; 
-            background-color: #f4f4f4;
+            background-color: #f9f1f0;
         }
         .link { 
             margin: 10px 0; 
@@ -19,7 +19,7 @@
         }
         a { 
             text-decoration: none; 
-            color: #007BFF; 
+            color: #000000; 
             font-size: 20px; 
         }
         a:hover {
