--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Links</title>
+    <title>LB Handmade</title>
     <style>
         body { 
             font-family: Arial, sans-serif; 
             text-align: center; 
+            font-size: 16px;
             padding: 50px; 
             background-color: #f9f1f0;
         }
