--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <img src="logo.png" alt="Logo" style="width:100px;height:auto;">
+    <img src="logo.png" alt="Logo" style="width:120px;height:auto;border-radius: 50%;">
     <h1>LB Handmade</h1>
     <div class="link"><a href="https://lbhandmade.mitiendanube.com/">Tienda Online</a></div>
 </body>
