--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 <body>
     <img src="logo.png" alt="Logo" style="width:120px;height:auto;border-radius: 50%;">
     <h1>LB Handmade</h1>
-    <div class="link"><a href="https://https://lbhandmade.empretienda.com.ar//">Tienda Online</a></div>
+    <div class="link"><a href="https://lbhandmade.empretienda.com.ar//">Tienda Online</a></div>
 </body>
 </html>
